--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "create-modern-web-dev",
   "version": "1.0.0",
-  "description": "Setup modern web app development with HTML, CSS, and JS",
+  "description": "Setup lightweight modern web app development with no configuration",
   "main": "index.js",
   "type": "module",
+  "bin": "./bin/cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --config webpack.dev.js",
-    "build": "rm -rf build/ & webpack --config webpack.prod.js"
+    "build": "npx rimraf ./build & webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "colors": "^1.4.0",
     "copy-webpack-plugin": "^10.2.4",
     "modern-web-dev-utils": "^1.1.2",
+    "node-emoji": "^1.11.0",
+    "rimraf": "^3.0.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
