--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "colors": "^1.4.0",
     "copy-webpack-plugin": "^10.2.4",
     "modern-web-dev-utils": "^1.1.2",
